--- a/jobs/templates/index.html
+++ b/jobs/templates/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Python </title>
-</head>
-<body>
-    <h1>
-        Jobs
-    </h1>
-</body>
-</html>
+<h1>Jobs</h1>
